--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -22,6 +22,6 @@
 
     -->
     <script  src="js/index.js"></script>
-    Hello World!
+    <p>Hello World! We are sofware developers!</p>
   </body>
 </html>
