--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
+  <body id = 'main-doc'>
+    <section class = 'main-section'></section>
+    <section class = 'main-section'></section>
+    <section class = 'main-section'></section>
+    <section class = 'main-section'></section>
+    <section class = 'main-section'></section>
+
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
