--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,11 +7,12 @@
   </head>
 
   <body id = 'main-doc'>
-    <section class = 'main-section'></section>
-    <section class = 'main-section'></section>
-    <section class = 'main-section'></section>
-    <section class = 'main-section'></section>
-    <section class = 'main-section'></section>
+    <section class = 'main-section' id="Mi_proyecto"> 
+      <header>Mi proyecto</header>
+      <p> </p>
+      
+    </section>
+
 
 
 
