--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -6,16 +6,45 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body id = 'main-doc'>
+  <body>
+    <main id = 'main-doc'>
     <section class = 'main-section' id="Mi_proyecto"> 
       <header>Mi proyecto</header>
-      <p> </p>
-      
+      <p>This is a paragrhap for the web page</p>
+      <p>This is a paragrhap for the web page</p>
+      <p>This is a paragrhap for the web page</p>
+      <p>This is a paragrhap for the web page</p>
+      <p>This is a paragrhap for the web page</p>
+      <p>This is a paragrhap for the web page</p>
+      <p>This is a paragrhap for the web page</p>
+      <code></code>
+    </section>
+    
+    <section class = 'main-section' id="Mi_proyecto">
+        <header>Mi proyecto</header>
+      <p>This is a paragrhap for the web page</p>
+      <code></code>
+    </section>
+    <section class = 'main-section' id="Mi_proyecto">
+        <header>Mi proyecto</header> 
+      <p>This is a paragrhap for the web page</p>
+      <code></code>
+    </section>
+    <section class = 'main-section' id="Mi_proyecto">
+        <header>Mi proyecto</header>
+        <p>This is a paragrhap for the web page</p>
+        <code></code>
+    </section>
+    <section class = 'main-section' id="Mi_proyecto">
+        <header>Mi proyecto</header>
+        <p>This is a paragrhap for the web page</p>
+        <code></code>
     </section>
 
 
 
 
+  </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
