--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -23,6 +23,9 @@
       <li>li 3</li>
       <li>li 4</li>
       <li>li 5</li>
+      <nav id="navbar">
+        
+      </nav>
     </section>
     
     <section class = 'main-section' id="Mi_proyecto">
