--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -26,11 +26,11 @@
       <li>li 5</li>
       <nav id="navbar">
         <header> This is a very important Documentation</header>
-        <a href="" class='nav-link'>Mi proyecto 1</a>
-        <a href="" class='nav-link'>Mi proyecto 2</a>
-        <a href="" class='nav-link'>Mi proyecto 3</a>
-        <a href="" class='nav-link'>Mi proyecto 4</a>
-        <a href="" class='nav-link'>Mi proyecto 5</a>
+        <a href= #Mi_proyecto_1 class='nav-link'>Mi proyecto 1</a>
+        <a href=#Mi_proyecto_2 class='nav-link'>Mi proyecto 2</a>
+        <a href=#Mi_proyecto_3 class='nav-link'>Mi proyecto 3</a>
+        <a href=#Mi_proyecto_4 class='nav-link'>Mi proyecto 4</a>
+        <a href=#Mi_proyecto_5 class='nav-link'>Mi proyecto 5</a>
   
       </nav>
     </section>
